--- a/index.html
+++ b/index.html
@@ -8,5 +8,17 @@
 </head>
 <body>
     <div class="box"></div>
+    <div class="box1"></div>
+    <div class="box2"></div>
+    <div class="box3"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <img src="./img/images.jpg" alt="" class="img">
 </body>
 </html>
